--- a/src/main/resources/templates/login_page.html
+++ b/src/main/resources/templates/login_page.html
@@ -6,9 +6,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title>登录</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-    <link href="https://getbootstrap.com/docs/4.0/examples/signin/signin.css" rel="stylesheet" crossorigin="anonymous"/>
+    <script th:src="@{../js/jquery-3.2.1.min.js}"></script>
+    <link rel="stylesheet" th:href="@{../bootstrap-4.4.1-dist/css/bootstrap.min.css}">
 </head>
 <body>
 <div class="container">
@@ -26,15 +25,8 @@
         <div th:if="${param.error}">
             <p style="text-align: center" class="text-danger">登录失败，账号或密码错误!</p>
         </div>
-        <div th:if="${result}">
-            <p style="text-align: center" class="text-success" th:text="${result}"></p>
-        </div>
-        <input name="_csrf" type="hidden" value="a189ac5b-907e-4efa-893c-792336004a9a" />
         <button class="btn btn-lg btn-primary btn-block" type="submit">登录</button>
     </form>
-    <a href="/index">主页</a>
-    <a href="/user">用户页面</a>
-    <a href="/admin">管理员页面</a>
-    <a href="/login">登录页面</a>
+    <div id="navigation" th:include="navigate::info"></div>
 </div>
 </body></html>
