--- a/src/main/resources/templates/user/user.html
+++ b/src/main/resources/templates/user/user.html
@@ -6,16 +6,10 @@
 </head>
 <body>
 <h1>用户页面，需要USER权限</h1>
-<p>已经成功登陆，你的用户名是：</p>
-<p th:text="${username}" style="margin-top: 25px; color: crimson">username</p>
-<p>你的权限是：</p>
-<p th:text="${authorities}" style="margin-top: 25px; color: crimson">authorities</p>
+
 <form th:action="@{/logout}" method="post">
     <button class="btn btn-danger" style="margin-top: 20px">退出登录</button>
 </form>
-<a href="/index">主页</a>
-<a href="/user">用户页面</a>
-<a href="/admin">管理员页面</a>
-<a href="/login">登录页面</a>
+<div id="navigation" th:include="navigate::info"></div>
 </body>
 </html>
