update blog editor

--- a/src/main/resources/static/css/old/article_main.css
+++ b/src/main/resources/static/css/old/article_main.css
@@ -1,6 +1,6 @@
 body{
     /*background-color: rgba(197, 237, 240, 0.76);*/
-    background-image: url("../img/test01.jpg");
+    background-image: url("../../img/test01.jpg");
     background-repeat: no-repeat;
 }
 #indexbox{
