--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="zh" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Index</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>主页</title>
+    <script th:src="@{js/jquery-3.5.1.min.js}"></script>
+    <script th:src="@{bootstrap-4.4.1-dist/js/bootstrap.bundle.min.js}"></script>
+    <link rel="stylesheet" th:href="@{bootstrap-4.4.1-dist/css/bootstrap.min.css}">
 </head>
 <body>
-<h1>主页，不需要任何权限即可访问</h1>
-<div id="navigation" th:include="navigate::info"></div>
+<div class="container">
+    <div th:include="navigate::navbar"></div>
+    <div class="jumbotron jumbotron-fluid">
+        <h1 class="display-4">Blog 主页</h1>
+        <p class="lead">不需要任何权限即可访问</p>
+    </div>
+    <div th:include="navigate::info"></div>
+</div>
+<div th:include="navigate::advertisement"></div>
 </body>
 </html>
