--- a/src/main/resources/templates/login_page.html
+++ b/src/main/resources/templates/login_page.html
@@ -3,30 +3,31 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
     <title>登录</title>
-    <script th:src="@{../js/jquery-3.2.1.min.js}"></script>
-    <link rel="stylesheet" th:href="@{../bootstrap-4.4.1-dist/css/bootstrap.min.css}">
+    <script th:src="@{js/jquery-3.5.1.min.js}"></script>
+    <script th:src="@{bootstrap-4.4.1-dist/js/bootstrap.bundle.min.js}"></script>
+    <link rel="stylesheet" th:href="@{bootstrap-4.4.1-dist/css/bootstrap.min.css}">
+    <link rel="stylesheet" th:href="@{css/signin.css}">
 </head>
 <body>
-<div class="container">
+<div class="container w-50">
+    <div id="navigation" th:include="navigate::nav"></div>
     <form class="form-signin" method="post" th:action="@{/login}">
         <h2 class="form-signin-heading">登录</h2>
-        <p>
-            <label for="username" class="sr-only">用户名</label>
-            <input type="text" id="username" name="username" class="form-control" placeholder="Username" required
+        <div class="form-group">
+            <label for="username" class="sr-only" hidden>用户名s</label>
+            <input type="text" id="username" name="username" class="form-control" placeholder="用户名" required
                    autofocus>
-        </p>
-        <p>
-            <label for="password" class="sr-only">密码</label>
-            <input type="password" id="password" name="password" class="form-control" placeholder="Password" required>
-        </p>
+        </div>
+        <div class="form-group">
+            <label for="password" class="sr-only" hidden>密码</label>
+            <input type="password" id="password" name="password" class="form-control" placeholder="密码" required>
+        </div>
         <div th:if="${param.error}">
             <p style="text-align: center" class="text-danger">登录失败，账号或密码错误!</p>
         </div>
         <button class="btn btn-lg btn-primary btn-block" type="submit">登录</button>
     </form>
-    <div id="navigation" th:include="navigate::info"></div>
+    <div id="userInfo" th:include="navigate::info"></div>
 </div>
 </body></html>
