--- a/src/main/resources/templates/login_page.html
+++ b/src/main/resources/templates/login_page.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<html lang="zh" xmlns:th="http://www.thymeleaf.org">
+<html lang="zh" xmlns:th="http://www.thymeleaf.org"
+>
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="_csrf" th:content="${_csrf.token}"/>
+    <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
     <title>登录</title>
     <script th:src="@{js/jquery-3.5.1.min.js}"></script>
     <script th:src="@{bootstrap-4.4.1-dist/js/bootstrap.bundle.min.js}"></script>
@@ -10,24 +13,36 @@
     <link rel="stylesheet" th:href="@{css/signin.css}">
 </head>
 <body>
-<div class="container w-50">
-    <div id="navigation" th:include="navigate::nav"></div>
-    <form class="form-signin" method="post" th:action="@{/login}">
-        <h2 class="form-signin-heading">登录</h2>
-        <div class="form-group">
-            <label for="username" class="sr-only" hidden>用户名s</label>
-            <input type="text" id="username" name="username" class="form-control" placeholder="用户名" required
-                   autofocus>
+<div class="container">
+    <div th:include="navigate::navbar"></div>
+    <div class="container col-10 form-container">
+        <div th:if="${param.logout}">
+            You have been logged out.
         </div>
-        <div class="form-group">
-            <label for="password" class="sr-only" hidden>密码</label>
-            <input type="password" id="password" name="password" class="form-control" placeholder="密码" required>
+        <div id="login_form" class="form-signin">
+            <h2 class="form-signin-heading">登录</h2>
+            <div class="form-group">
+                <label for="username" class="sr-only" hidden>用户名s</label>
+                <input type="text" id="username" name="username" class="form-control" placeholder="用户名" required
+                       autofocus>
+            </div>
+            <div class="form-group">
+                <label for="password" class="sr-only" hidden>密码</label>
+                <input type="password" id="password" name="password" class="form-control" placeholder="密码" required>
+            </div>
+            <div id="login_info">
+                <!--登录后返回的结果-->
+            </div>
+            <div class="form-group form-check">
+                <input type="checkbox" class="form-check-input" id="rememberMe" name="remember-me">
+                <label class="form-check-label" for="rememberMe">记住我</label>
+            </div>
+            <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
+            <button id="submitBtn" class="btn btn-lg btn-primary btn-block" type="submit">登录</button>
         </div>
-        <div th:if="${param.error}">
-            <p style="text-align: center" class="text-danger">登录失败，账号或密码错误!</p>
-        </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">登录</button>
-    </form>
+    </div>
     <div id="userInfo" th:include="navigate::info"></div>
 </div>
-</body></html>
+<script th:src="@{js/login_page.js}"></script>
+</body>
+</html>
