--- a/src/main/resources/templates/navigate.html
+++ b/src/main/resources/templates/navigate.html
@@ -10,7 +10,7 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon">
-                <!--此span为折叠后显示的按钮-->
+                <!--此处为折叠后的按钮-->
             </span>
         </button>
         <div id="navbarSupportedContent" class="collapse navbar-collapse">
