--- a/src/main/resources/templates/login_page.html
+++ b/src/main/resources/templates/login_page.html
@@ -30,6 +30,17 @@
                 <label for="password" class="sr-only" hidden>密码</label>
                 <input type="password" id="password" name="password" class="form-control" placeholder="密码" required>
             </div>
+            <div class="form-group">
+                <label for="validateCode" class="sr-only" hidden>验证码</label>
+                <input type="password" id="validateCode" name="validateCode" class="form-control" placeholder="验证码"
+                       required>
+                <img id="codeImg" src="/vCode/image" alt="点击切换图片">
+                <script>
+                    $("#codeImg").click(function () {
+                        $("#codeImg").attr("src", "/vCode/image?t=" + new Date().getTime());
+                    })
+                </script>
+            </div>
             <div id="login_info">
                 <!--登录后返回的结果-->
             </div>
