--- a/src/main/resources/templates/register_page.html
+++ b/src/main/resources/templates/register_page.html
@@ -31,6 +31,17 @@
                    placeholder="密码" required>
             <div id="valid_password"></div>
         </div>
+        <div class="form-group">
+            <label for="validateCode" class="sr-only" hidden>验证码</label>
+            <input type="password" id="validateCode" name="validateCode" class="form-control" placeholder="验证码"
+                   required>
+            <img id="codeImg" src="/vCode/image" alt="点击切换图片">
+            <script>
+                $("#codeImg").click(function () {
+                    $("#codeImg").attr("src", "/vCode/image?t=" + new Date().getTime());
+                })
+            </script>
+        </div>
         <button id="submitBtn" class="btn btn-lg btn-primary btn-block" type="submit">注册</button>
     </form>
     <div id="userInfo" th:include="navigate::info"></div>
