--- a/src/main/resources/templates/register_page.html
+++ b/src/main/resources/templates/register_page.html
@@ -42,6 +42,9 @@
                 })
             </script>
         </div>
+        <div id="register_result">
+            <!--提交后返回的结果-->
+        </div>
         <button id="submitBtn" class="btn btn-lg btn-primary btn-block" type="submit">注册</button>
     </form>
     <div id="userInfo" th:include="navigate::info"></div>
