--- a/src/main/resources/templates/blog/editor.html
+++ b/src/main/resources/templates/blog/editor.html
@@ -61,6 +61,9 @@
                 </div>
             </div>
             <div class="form-group row">
+                <div id="submit_result">
+                    <!--登录后返回的结果-->
+                </div>
                 <button id="submit_blog_btn" type="button" class="btn btn-lg btn-primary btn-block">发布文章</button>
             </div>
         </form>
