--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,8 +19,19 @@
             <p class="lead">不需要任何权限即可访问</p>
         </div>
         <div class="blog-container">
-            <div th:text="${blogs}"></div>
             <!--在这输出博客-->
+            <div class="card" th:each="blog:${blogs}">
+                <div class="card-body">
+                    <div class="card-header">
+                        作者 <span th:text="${blog.authorName}"></span>
+                        时间 <span th:text="${blog.lastPushDate}"></span>
+                    </div>
+                    <a class="text-decoration-none" th:href="@{'/b/'+${blog.id}}">
+                        <div class="card-title" th:text="${blog.title}"></div>
+                    </a>
+                    <div class="" th:utext="${blog.contentView}"></div>
+                </div>
+            </div>
         </div>
         <div sec:authorize="hasRole('ROLE_BLOG')" th:include="navigate::write" class="float-right bg-dark"></div>
         <div th:include="navigate::info"></div>
