--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh" xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+>
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -8,35 +8,41 @@
     <script th:src="@{js/jquery-3.5.1.min.js}"></script>
     <script th:src="@{bootstrap-4.4.1-dist/js/bootstrap.bundle.min.js}"></script>
     <link rel="stylesheet" th:href="@{bootstrap-4.4.1-dist/css/bootstrap.min.css}">
+    <link rel="stylesheet" th:href="@{css/common.css}">
 </head>
 <body>
-<div class="">
-    <div th:include="navigate::navbar"></div>
-
+<div th:include="navigate::navbar"></div>
+<div class="jumbotron jumbotron-fluid">
     <div class="container">
-        <div class="jumbotron jumbotron-fluid">
-            <h1 class="display-4">Blog 主页</h1>
-            <p class="lead">不需要任何权限即可访问</p>
-        </div>
-        <div class="blog-container">
-            <!--在这输出博客-->
-            <div class="card" th:each="blog:${blogs}">
-                <div class="card-body">
-                    <div class="card-header">
-                        作者 <span th:text="${blog.authorName}"></span>
-                        时间 <span th:text="${blog.lastPushDate}"></span>
-                    </div>
-                    <a class="text-decoration-none" th:href="@{'/b/'+${blog.id}}">
-                        <div class="card-title" th:text="${blog.title}"></div>
-                    </a>
-                    <div class="" th:utext="${blog.contentView}"></div>
-                </div>
-            </div>
-        </div>
-        <div sec:authorize="hasRole('ROLE_BLOG')" th:include="navigate::write" class="float-right bg-dark"></div>
-        <div th:include="navigate::info"></div>
+        <h1 class="display-4">Blog 主页</h1>
+        <p class="lead">不需要任何权限即可访问</p>
     </div>
-
+</div>
+<div class="container">
+    <div class="blog-container">
+        <!--在这输出博客-->
+        <div class="card" th:each="blog:${blogs}">
+            <!--start-->
+            <div class="card-body">
+                <div class="card-header bg-light">
+                    <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-person" fill="currentColor"
+                         xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd"
+                              d="M13 14s1 0 1-1-1-4-6-4-6 3-6 4 1 1 1 1h10zm-9.995-.944v-.002.002zM3.022 13h9.956a.274.274 0 0 0 .014-.002l.008-.002c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664a1.05 1.05 0 0 0 .022.004zm9.974.056v-.002.002zM8 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm3-2a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+                    </svg>
+                    <span th:text="${blog.authorName}"></span>
+                    &nbsp;&nbsp;&nbsp;&nbsp;
+                    <span th:text="${blog.lastPushDate}"></span>
+                </div>
+                <div class="card-title">
+                    <a class="text-decoration-none" th:href="@{'/b/'+${blog.id}}" th:text="${blog.title}"></a>
+                </div>
+                <div class="card-text" th:utext="${blog.contentView}"></div>
+            </div>
+            <!--end-->
+        </div>
+    </div>
+    <div th:include="navigate::info"></div>
 </div>
 <div th:include="navigate::advertisement"></div>
 </body>
