--- a/src/main/resources/templates/login_page.html
+++ b/src/main/resources/templates/login_page.html
@@ -11,10 +11,11 @@
     <script th:src="@{bootstrap-4.4.1-dist/js/bootstrap.bundle.min.js}"></script>
     <link rel="stylesheet" th:href="@{bootstrap-4.4.1-dist/css/bootstrap.min.css}">
     <link rel="stylesheet" th:href="@{css/signin.css}">
+    <link rel="stylesheet" th:href="@{css/common.css}">
 </head>
 <body>
+<div th:include="navigate::navbar"></div>
 <div class="container">
-    <div th:include="navigate::navbar"></div>
     <div class="container col-10 form-container">
         <div th:if="${param.logout}">
             You have been logged out.
