--- a/src/main/resources/templates/blog/show.html
+++ b/src/main/resources/templates/blog/show.html
@@ -4,46 +4,52 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="_csrf" th:content="${_csrf.token}"/>
-    <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
-    <title>title</title>
-    <script th:src="@{js/jquery-3.2.1.min.js}"></script>
-    <script th:src="@{bootstrap-4.4.1-dist/js/bootstrap.bundle.min.js}"></script>
-    <link rel="stylesheet" th:href="@{bootstrap-4.4.1-dist/css/bootstrap.min.css}">
+    <!--    <meta name="_csrf" th:content="${_csrf.token}"/>-->
+    <!--    <meta name="_csrf_header" th:content="${_csrf.headerName}"/>-->
+    <title th:text="${blog.title}">title</title>
+    <script th:src="@{../js/jquery-3.5.1.min.js}"></script>
+    <script th:src="@{../bootstrap-4.4.1-dist/js/bootstrap.bundle.min.js}"></script>
+    <link rel="stylesheet" th:href="@{../bootstrap-4.4.1-dist/css/bootstrap.min.css}">
+    <link rel="stylesheet" th:href="@{../css/common.css}">
     <style>
-
+        .blog-content {
+            padding: 10px 0 10px;
+        }
     </style>
 </head>
 
 <body>
+<div th:include="navigate::navbar"></div>
 <div class="container">
-    <div th:include="navigate::navbar"></div>
     <div class="blog-container">
-        <div class="blog-top">
-            <div class="blog-title">
-                <!-- blog标题 -->
-            </div>
-            <div class="blog-author">
-                <!-- 作者信息 -->
-            </div>
-            <div class="blog-time">
-                <!-- 上传时间/最后编辑 -->
+        <div class="card container w-75">
+            <div class="card-body">
+                <!--标题及作者信息等-->
+                <div class="card-header bg-light text-center">
+                    <h2 class="card-title" th:text="${blog.title}"></h2>
+                    <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-person" fill="currentColor"
+                         xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd"
+                              d="M13 14s1 0 1-1-1-4-6-4-6 3-6 4 1 1 1 1h10zm-9.995-.944v-.002.002zM3.022 13h9.956a.274.274 0 0 0 .014-.002l.008-.002c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664a1.05 1.05 0 0 0 .022.004zm9.974.056v-.002.002zM8 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm3-2a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+                    </svg>
+                    <span th:text="${blog.authorName}"></span>
+                    <br>
+                    <div style="font-size: 12px;">
+                        发布时间&nbsp;&nbsp;<span th:text="${blog.firstPushDate}"></span>
+                        &nbsp;&nbsp;|&nbsp;&nbsp;
+                        最后编辑&nbsp;&nbsp;<span th:text="${blog.lastPushDate}"></span>
+                    </div>
+                </div>
+                <!--文章内容-->
+                <div class="blog-content card-text" th:utext="${blog.content}"></div>
+
+                <div class="blog-tag text-primary my-2" th:text="${blog.topicName}"></div>
             </div>
         </div>
-        <div class="blog-content">
-            <!-- blog内容 -->
-        </div>
-        <div class="blog-bottom">
-            <div class="blog-topic">
-                <!-- 主题/标签 -->
-            </div>
-            <div class="blog-likes">
-                <!-- 赞数/点赞 -->
-            </div>
-        </div>
+
     </div>
-    <div th:include="navigate::advertisement"></div>
     <div th:include="navigate::info"></div>
 </div>
+<div th:include="navigate::advertisement"></div>
 </body>
 </html>
