--- a/src/main/resources/templates/navigate.html
+++ b/src/main/resources/templates/navigate.html
@@ -7,7 +7,7 @@
 <div th:fragment="navbar">
     <nav class="navbar navbar-expand-md fixed-top navbar-light bg-warning">
         <div class="container">
-            <a class="navbar-brand" href="/">Blog</a>
+            <a class="navbar-brand font-weight-bolder" href="/">Blog</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon">
