--- a/src/main/resources/templates/register_page.html
+++ b/src/main/resources/templates/register_page.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="_csrf" th:content="${_csrf.token}"/>
-    <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
+    <!--    <meta name="_csrf" th:content="${_csrf.token}"/>-->
+    <!--    <meta name="_csrf_header" th:content="${_csrf.headerName}"/>-->
     <title>注册</title>
-    <script th:src="@{js/jquery-3.5.1.min.js}"></script>
-    <script th:src="@{bootstrap-4.4.1-dist/js/bootstrap.bundle.min.js}"></script>
-    <link rel="stylesheet" th:href="@{bootstrap-4.4.1-dist/css/bootstrap.min.css}">
-    <link rel="stylesheet" th:href="@{css/signin.css}">
-    <link rel="stylesheet" th:href="@{css/common.css}">
+    <script th:src="@{../js/jquery-3.5.1.min.js}"></script>
+    <script th:src="@{../bootstrap-4.4.1-dist/js/bootstrap.bundle.min.js}"></script>
+    <link rel="stylesheet" th:href="@{../bootstrap-4.4.1-dist/css/bootstrap.min.css}">
+    <link rel="stylesheet" th:href="@{../css/signin.css}">
+    <link rel="stylesheet" th:href="@{../css/common.css}">
 </head>
 <body>
 <div th:include="navigate::navbar"></div>
